# aviationwx.org-archiver

./: .dockerignore  .editorconfig  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: __init__.py  archiver.py  config.py  constants.py  ntp.py  scheduler.py  version.py  web.py  worker.py
app/templates/: base.html  browse.html  config.html  dashboard.html
config/: config.yaml.example
tests/: __init__.py  conftest.py  test_archiver.py  test_config.py  test_ntp.py  test_scheduler.py  test_web.py  test_worker.py
