[project]
name = "aviationwx-archiver"
version = "0.7.1"
description = "Archives webcam images from AviationWX.org"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "venv", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore:::urllib3"]
